--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/leanneduyck/Meet",
+  "homepage": "https://github.com/leanneduyck/meet/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -50,8 +50,7 @@
       "last 1 safari version"
     ]
   },
-    "devDependencies": {
-          "gh-pages": "^5.0.0"
-
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
