--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/user-event": "^14.5.2",
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "jest-cucumber": "^4.4.0",
+    "puppeteer": "^10.4.0"
   }
 }
