--- a/package.json
+++ b/package.json
@@ -50,10 +50,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@testing-library/user-event": "^14.5.2",
+    "babel-loader": "^9.1.3",
     "gh-pages": "^5.0.0",
     "jest-cucumber": "^4.4.0",
-    "puppeteer": "^10.4.0"
+    "puppeteer": "^10.4.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
