--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "workbox-streams": "^6.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -59,6 +59,7 @@
     "gh-pages": "^5.0.0",
     "jest-cucumber": "^4.4.0",
     "puppeteer": "^10.4.0",
+    "react-app-rewired": "^2.2.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
