--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "workbox-streams": "^6.6.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "react-scripts start",
     "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
