--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
   "headers": [
     {
+      "source": "/service-worker.js",
+      "headers": [{ "key": "Cache-Control", "value": "no-store" }]
+    },
+    {
+      "source": "/manifest.json",
+      "headers": [{ "key": "Content-Type", "value": "application/json" }]
+    },
+    {
       "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Permissions-Policy",
-          "value": ""
-        }
-      ]
+      "headers": [{ "key": "Permissions-Policy", "value": "" }]
     }
   ]
 }
