--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "atatus-spa": "^4.6.1",
     "axios": "^1.7.2",
+    "customize-cra": "^1.0.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -25,7 +26,8 @@
     "workbox-range-requests": "^6.6.0",
     "workbox-routing": "^6.6.0",
     "workbox-strategies": "^6.6.0",
-    "workbox-streams": "^6.6.0"
+    "workbox-streams": "^6.6.0",
+    "workbox-webpack-plugin": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
