--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leanneduyck/Meet.git"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
